Fixed entry field widths on mobile.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -202,9 +202,21 @@
     font-weight: 500;
     text-align: left;
 }
+@media (min-width: 1100px){
+    /* big screens */
+    .text-area-entry-large{
+        width: 80rem;
+        height: 30rem;
+    }
+}
+@media (max-width: 1100px){
+    /* small screens */
+    .text-area-entry-large{
+        width: 40rem;
+        height: 40rem;
+    }
+}
 .text-area-entry-large{
-    width: 80rem;
-    height: 30rem;
     background-color: var(--theme-entry-field);
     color: var(--theme-font-highlight);
     font-weight: 500;
@@ -224,9 +236,21 @@
     color: var(--theme-font-highlight);
     font-weight: 500;
 }
+
+@media (min-width: 1100px){
+    /* big screens */
+    .text-entry-long{
+        width: 60rem;
+    }
+}
+@media (max-width: 1100px){
+    /* small screens */
+    .text-entry-long{
+        width: 45rem;
+    }
+}
 .text-entry-long{
     text-align: left;
-    width: 60rem;
     background-color: var(--theme-entry-field);
     color: var(--theme-font-highlight);
     font-weight: 500;
